--- a/.envrc
+++ b/.envrc
@@ -83,7 +83,7 @@ fi
 #                          D o c k e r   C o m p o s e
 # ============================================================================ #
 
-export COMPOSE_PROJECT_NAME="bash-tools"
+export COMPOSE_PROJECT_NAME="HariSekhon"
 
 # ============================================================================ #
 #                                  G i t H u b
