--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -19,7 +19,15 @@
 name: Update Profile
 
 on:
+  push:
+    branches:
+      - master
+      - main
+    paths:
+      - .github/workflows/update_profile.yaml  # this workflow
+
   workflow_call:
+
   schedule:
     # - min interval is 5 mins
     # - scheduling may be delayed during periods of high load on GitHub Actions infra, such as at the top of every hour
