--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -42,7 +42,6 @@ defaults:
     shell: bash -euxo pipefail {0}
 
 env:
-  PATH: ${{ env.PATH }}:bash-tools/github
   GIT_AUTHOR_NAME: Hari Sekhon
   GIT_AUTHOR_EMAIL: harisekhon@gmail.com
 
@@ -64,6 +63,8 @@ jobs:
           path: bash-tools
 
       - name: Update Repo Count
+        env:
+          PATH: ${{ env.PATH }}:bash-tools/github
         run: |
           repo_count="$(github_user_repos_count.sh)"
           sed -i "s|badge/Repos-[[:digit:]]\+-|badge/Repos-${repo_count}-|" README.md
