--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -66,7 +66,7 @@ jobs:
         env:
           PATH: ${{ env.PATH }}:/usr/bin:bash-tools/github
         run: |
-          repo_count="$(github_user_repos_count.sh)"
+          repo_count="$(github_user_repos_count.sh "$GITHUB_REPOSITORY_OWNER")"
           sed -i "s|badge/Repos-[[:digit:]]\+-|badge/Repos-${repo_count}-|" README.md
 
       - name: Git Add
