--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -42,10 +42,13 @@ defaults:
     shell: bash -euxo pipefail {0}
 
 env:
+  # needs all 4 of these variables
   GIT_AUTHOR_NAME: Hari Sekhon
   GIT_AUTHOR_EMAIL: harisekhon@gmail.com
   GIT_COMMITTER_NAME: Hari Sekhon
   GIT_COMMITTER_EMAIL: harisekhon@gmail.com
+  GH_TOKEN: ${{ github.token }}
+  PATH: ${{ env.PATH }}:/usr/bin:bash-tools/github
   DEBUG: 1
 
 jobs:
@@ -68,9 +71,13 @@ jobs:
           path: bash-tools
 
       - name: Update Repo Count
+        run: |
+          repo_count="$(github_user_repos_count.sh "$GITHUB_REPOSITORY_OWNER")"
+          sed -i "s|badge/Repos-[[:digit:]]\+-|badge/Repos-${repo_count}-|" README.md
+
+      - name: Update Follower Count
         env:
           PATH: ${{ env.PATH }}:/usr/bin:bash-tools/github
-          GH_TOKEN: ${{ github.token }}
         run: |
           repo_count="$(github_user_repos_count.sh "$GITHUB_REPOSITORY_OWNER")"
           sed -i "s|badge/Repos-[[:digit:]]\+-|badge/Repos-${repo_count}-|" README.md
