--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -42,7 +42,7 @@ defaults:
     shell: bash -euxo pipefail {0}
 
 env:
-  # needs all 4 of these variables
+  # needs all 4 of these Git committer and author variables
   GIT_AUTHOR_NAME: Hari Sekhon
   GIT_AUTHOR_EMAIL: harisekhon@gmail.com
   GIT_COMMITTER_NAME: Hari Sekhon
