--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -76,11 +76,9 @@ jobs:
           sed -i "s|badge/Repos-[[:digit:]]\+-|badge/Repos-${repo_count}-|" README.md
 
       - name: Update Follower Count
-        env:
-          PATH: ${{ env.PATH }}:/usr/bin:bash-tools/github
         run: |
-          repo_count="$(github_user_repos_count.sh "$GITHUB_REPOSITORY_OWNER")"
-          sed -i "s|badge/Repos-[[:digit:]]\+-|badge/Repos-${repo_count}-|" README.md
+          follower_count="$(github_user_followers.sh "$GITHUB_REPOSITORY_OWNER")"
+          sed -i "s|badge/Followers-[[:digit:]]\+-|badge/Followers-${follower_count}-|" README.md
 
       - name: Git Add
         run: |
