--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -82,13 +82,13 @@ jobs:
 
           sed -i "s|badge/Followers-[[:digit:]]\+-|badge/Followers-${follower_count}-|" README.md
 
-      - name: Update Repo Stars Count
+      - name: Update Repos Stars Count
         run: |
           star_count="$(github_user_repos_stars.sh "$GITHUB_REPOSITORY_OWNER")"
 
           sed -i "s|badge/Stars-[[:digit:]]\+-|badge/Stars-${star_count}-|" README.md
 
-      - name: Update Fork Stars Count
+      - name: Update Repos Forks Count
         run: |
           fork_count="$(github_user_repos_forks.sh "$GITHUB_REPOSITORY_OWNER")"
 
