--- a/.github/workflows/update_profile.yaml
+++ b/.github/workflows/update_profile.yaml
@@ -32,7 +32,7 @@ on:
     # - min interval is 5 mins
     # - scheduling may be delayed during periods of high load on GitHub Actions infra, such as at the top of every hour
     # - '*' is a special character in YAML so you have to quote this string
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * 1'
 
 permissions:
   contents: write
